[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ff-genetic-algorithm"
version = "0.0.1"
description = "Hierarchical gene data structure for genetic algorithms"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
